# authorizer-py

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_example.py  fga_example.py  manual_test.py  sync_example.py
src/authorizer/: __init__.py  _core.py  _dispatch.py  _grpc_transport.py  _proto.py  _queries.py  admin_client.py  async_admin_client.py  async_client.py  client.py  exceptions.py  types.py
src/authorizer/_grpc/authorizer/v1/: admin_pb2.py  admin_pb2_grpc.py  annotations_pb2.py  authorizer_pb2.py  authorizer_pb2_grpc.py  common_pb2.py  errors_pb2.py  pagination_pb2.py  types_pb2.py
src/authorizer/_grpc/google/api/: annotations_pb2.py
tests/: test_admin_client.py  test_admin_parity.py  test_async_client.py  test_client_authed.py  test_client_init.py  test_client_login.py  test_client_public.py  test_core_build.py  test_core_parse.py  test_exceptions.py  test_parity.py  test_protocol_selection.py  test_public_api.py  test_queries.py  test_types.py
tests/integration/: test_live.py
