[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authorizer-dev"
version = "0.1.0"
description = "Python SDK for authorizer.dev — self-hosted authentication & authorization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "The Authorizer Authors" }]
keywords = ["authorizer", "authentication", "authorization", "oauth", "openid", "fga", "openfga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24,<1"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "respx>=0.20", "ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage = "https://authorizer.dev"
Documentation = "https://docs.authorizer.dev"
Source = "https://github.com/authorizerdev/authorizer-python"

[tool.hatch.build.targets.wheel]
packages = ["src/authorizer"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
