[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authorizer-py"
version = "0.3.0rc2"
description = "Python SDK for authorizer.dev — self-hosted authentication & authorization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "The Authorizer Authors" }]
keywords = ["authorizer", "authentication", "authorization", "oauth", "openid", "fga", "openfga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
# protobuf is a base dependency: the REST protocol parses grpc-gateway responses
# with protojson (int64-as-string + single-field wrappers) using the vendored
# proto message types. grpcio is only needed for the optional ``grpc`` protocol.
dependencies = ["httpx>=0.24,<1", "protobuf>=4"]

[project.optional-dependencies]
grpc = ["grpcio>=1.60", "protobuf>=4"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
    "ruff>=0.5",
    "mypy>=1.8",
    "grpcio>=1.60",
    "protobuf>=4",
]

[project.urls]
Homepage = "https://authorizer.dev"
Documentation = "https://docs.authorizer.dev"
Source = "https://github.com/authorizerdev/authorizer-python"

[tool.hatch.build.targets.wheel]
packages = ["src/authorizer"]

[tool.ruff]
line-length = 100
target-version = "py39"
# Vendored generated gRPC/protobuf stubs — never lint.
extend-exclude = ["src/authorizer/_grpc"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
# Vendored generated gRPC/protobuf stubs — not type-checked.
exclude = ["src/authorizer/_grpc/"]

[[tool.mypy.overrides]]
module = "authorizer._grpc.*"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*", "google.protobuf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: integration tests that hit a real Authorizer server (deselect with -m 'not live')",
]
